syntax = "proto3";

package messaging;

service MessageService {
    rpc SendMessage(MessageRequest) returns (Empty) {}
    rpc GetReceivedMessages(RecipientRequest) returns (MessageList) {}
}

message MessageRequest {
    string sender = 1;
    string recipient = 2;
    string message = 3;
}

message RecipientRequest {
    string recipient = 1;
}

message MessageList {
    repeated string messages = 1;
}

message Empty {}
